# SRust-Soroban-examples

./: README.md
soroban/: Cargo.toml  README.md
soroban/asset-tokenization-contract/: .env.example  Makefile  README.md  cargo.toml
soroban/asset-tokenization-contract/.github/workflows/: ci.yml
soroban/asset-tokenization-contract/src/: admin.rs  compliance.rs  issuance.rs  lib.rs  test.rs  token.rs  transfer.rs
soroban/asset-tokenization-contract/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_compliance_status_check.1.json  test_freeze_account.1.json  test_initialize_and_tokenize.1.json  test_multiple_tokens.1.json  test_redeem.1.json  test_transfer.1.json
soroban/contracts/amm-contract/: Cargo.toml  README.md
soroban/contracts/amm-contract/src/: fees.rs  lib.rs  liquidity.rs  math.rs  pool.rs  position.rs  swap.rs  test.rs  tick_bitmap.rs
soroban/contracts/carbon-credit-registry/: Cargo.toml  Makefile  README.md
soroban/contracts/carbon-credit-registry/src/: credits.rs  lib.rs  test.rs  trading.rs  utils.rs
soroban/contracts/clinical-trial-data-verifier/: Cargo.toml  README.md
soroban/contracts/clinical-trial-data-verifier/src/: data.rs  lib.rs  utils.rs  verifier.rs
soroban/contracts/cross-border-contract/: Cargo.toml
soroban/contracts/cross-border-contract/src/: compliance.rs  fees.rs  fx.rs  lib.rs  settlement.rs  test.rs  transfer.rs  types.rs
soroban/contracts/demand-response-rewards/src/: events.rs  lib.rs  rewards.rs  utils.rs
soroban/contracts/distributed-energy-resource-manager/: Cargo.toml  Makefile  README.md
soroban/contracts/distributed-energy-resource-manager/src/: lib.rs  optimization.rs  resource.rs  test.rs  utils.rs
soroban/contracts/ehr-interoperability-bridge/: Cargo.toml  Makefile  README.md
soroban/contracts/ehr-interoperability-bridge/src/: bridge.rs  interoperability.rs  lib.rs  test.rs  utils.rs
soroban/contracts/energy-consumption-verifier/: Cargo.toml  Makefile  README.md
soroban/contracts/energy-consumption-verifier/src/: lib.rs  reporting.rs  test.rs  utils.rs  verifier.rs
soroban/contracts/energy-project-funding-escrow/: Cargo.toml  Makefile  README.md
soroban/contracts/energy-project-funding-escrow/src/: escrow.rs  lib.rs  milestones.rs  test.rs  types.rs  utils.rs
soroban/contracts/energy-trading-marketplace/: Cargo.toml  Makefile  README.md
soroban/contracts/energy-trading-marketplace/src/: lib.rs  settlement.rs  trading.rs  utils.rs
soroban/contracts/grid-load-balancing-incentives/: Cargo.toml  Makefile  README.md
soroban/contracts/grid-load-balancing-incentives/src/: demand.rs  incentives.rs  lib.rs  utils.rs
soroban/contracts/health-insurance-claims-automator/: Cargo.toml  Makefile  README.md
soroban/contracts/health-insurance-claims-automator/src/: automator.rs  claims.rs  lib.rs  test.rs  utils.rs
soroban/contracts/medical-donation-escrow/: Cargo.toml  Makefile  README.md
soroban/contracts/organ-donation-matching-protocol/: Cargo.toml  Makefile  README.md
soroban/contracts/patient-consent-management-system/: Cargo.toml  Makefile  README.md
soroban/contracts/payment-streaming/: Cargo.toml
soroban/contracts/peer-to-peer-energy-sharing/: Cargo.toml  Makefile  README.md
soroban/contracts/pharmaceutical-supply-chain-tracker/: Cargo.toml  Makefile  README.md
soroban/contracts/renewable-energy-certificate-tracker/: Cargo.toml  Makefile  README.md
soroban/contracts/secure-medical-records-sharing/: .env.example  Cargo.toml  Makefile  README.md
soroban/contracts/stablecoin-contract/: Cargo.toml
soroban/contracts/telemedicine-payment-gateway/: Cargo.toml  Makefile  README.md
soroban/contracts/vaccine-distribution-ledger/: Cargo.toml  Makefile  README.md
soroban/demand-response-rewards/: Cargo.toml  Makefile  README.md
soroban/demand-response-rewards/src/: events.rs  lib.rs  utils.rs
soroban/health-insurance-claims-automator/: Cargo.toml
soroban/health-insurance-claims-automator/src/: lib.rs
(+415 files in other folders)
