[workspace]
resolver = "2"
members = [

  "contracts/amm-contract",
  "contracts/cross-border-contract",
  "contracts/payment-streaming",
  "contracts/pharmaceutical-supply-chain-tracker",
  "contracts/stablecoin-contract",
  "contracts/telemedicine-payment-gateway",
  "asset-tokenization-contract"
]
exclude = [
  "contracts/secure-medical-records-sharing"

]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
