[package]
name = "energy-project-funding-escrow"
version = "0.1.0"
description = "Soroban smart contract for energy project funding escrow management"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
